--- a/v2.0/Dockerfile
+++ b/v2.0/Dockerfile
@@ -85,11 +85,23 @@ RUN echo "# -------------------------------- end EPICS synApps" 2>&1 | tee -a "$
 RUN echo "# -------------------------------- start create custom GP IOC" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
 COPY ./resources/create_gp_ioc.sh "${RESOURCES}/"
 COPY ./resources/general_purpose.db /tmp/
-COPY ./resources/gp_screens /tmp/
+COPY ./resources/gp_screens/ /tmp/gp_screens
 RUN "${RESOURCES}/create_gp_ioc.sh" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
 RUN echo "# -------------------------------- end create custom GP IOC" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
 
-# TODO: add custom support for custom ADSimDetector IOC
-# TODO: add custom support for custom pvaDriver IOC
-# TODO: add custom support for custom ADURL IOC
+RUN echo "# -------------------------------- start create custom ADSimDetector IOC" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+COPY ./resources/create_adsim_ioc.sh "${RESOURCES}/"
+# RUN "${RESOURCES}/create_adsim_ioc.sh" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+RUN echo "# -------------------------------- end create custom ADSimDetector IOC" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+
+RUN echo "# -------------------------------- start create custom pvaDriver IOC" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+# COPY ./resources/create_adpva_ioc.sh "${RESOURCES}/"
+# RUN "${RESOURCES}/create_adpva_ioc.sh" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+RUN echo "# -------------------------------- end create custom pvaDriver IOC" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+
+RUN echo "# -------------------------------- start create custom ADURL IOC" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+# COPY ./resources/create_adurl_ioc.sh "${RESOURCES}/"
+# RUN "${RESOURCES}/create_adurl_ioc.sh" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+RUN echo "# -------------------------------- end create custom ADURL IOC" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
+
 # TODO: add support to start/stop IOCs in containers
