--- a/v2.0/Dockerfile
+++ b/v2.0/Dockerfile
@@ -85,6 +85,7 @@ RUN echo "# -------------------------------- end EPICS synApps" 2>&1 | tee -a "$
 
 RUN echo "# -------------------------------- start create custom GP IOC" 2>&1 | tee -a "${LOG_DIR}/dockerfile.log"
 COPY ./resources/general_purpose.db /tmp/
+COPY ./resources/gp_asyn_motor.db.patch "${RESOURCES}/"
 COPY ./resources/gp_screens/ /tmp/gp_screens
 COPY ./resources/start_caQtDM.sh /tmp/
 COPY ./resources/start_MEDM.sh /tmp/
